# Metadata-Murderer

./: .fake_dev_log  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python.yml  release.yml
metadata_murderer/: __init__.py  cli.py  core.py
tests/: test_basic.py
